--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TeamAB</title>
+    <title>WebsiteTeamAB</title>
   </head>
   <body>
-    <h1>Team AB</h1>
+    <h1>Nguyen Van A</h1>
   </body>
 </html>
